# fdratestracker

./: .gitignore  getrates.py  pyproject.toml  requirements.txt
data/2023/04/: 03.json
