[tool.poetry]
name = "fd rates tracker"
version = "0.1.0"
description = ""
authors = ["Pradyumna Chatterjee <chatterjee.pra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"
pytablewriter = "^0.64.2"

[tool.poetry.scripts]
getrates = "getrates:run"

[tool.poetry.group.dev.dependencies]
memray = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
